fix content height when screen height is small to prevent content overflow

--- a/portfolio/src/components/Experience/Experience.module.css
+++ b/portfolio/src/components/Experience/Experience.module.css
@@ -78,3 +78,9 @@
     }
 }
 
+@media screen and (height <= 600px) {
+    .container {
+        min-height: 600px;
+    }
+}
+
