--- a/portfolio/src/components/Header/Header.module.css
+++ b/portfolio/src/components/Header/Header.module.css
@@ -76,3 +76,9 @@
       display: none;
     }
 }
+
+@media screen and (height <= 600px) {
+    .container {
+        min-height: 600px;
+    }
+}
