--- a/portfolio/src/components/ProjectsThree/ProjectsThree.module.css
+++ b/portfolio/src/components/ProjectsThree/ProjectsThree.module.css
@@ -5,8 +5,8 @@
     flex-direction: column; /* Stack items in projects page vertically */
     justify-content: center; /* Center content vertically */
     align-items: center; /* Center content horizontally */
-    height: 100vh; /* 100% of viewport height */
-    width: 100vw; /* 100% of viewport width */
+    height: 100%;
+    width: 100%;
     scroll-snap-align: start;
     background-color: var(--color-beige);
 }
@@ -21,7 +21,6 @@
 .projects {
     display: flex; 
     flex-direction: row; 
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     width: 70%;
@@ -41,5 +40,12 @@
     .projects {
         flex-direction: column;
         gap: 10px;
+    }
+}
+
+
+@media screen and (height <= 600px) {
+    .container {
+        min-height: 700px;
     }
 }
